2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/powerpc/bootinfo.txt.in: Missing update from previous
	commit.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/partmap_test.in: Add missing double semicolon.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Fix loongson filename.

2013-04-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Move all files that don't have a location
	set in stone under /boot/grub. Use ISO hard links rather than copies
	to save some space.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/ieee1275/console.c (grub_console_dimensions): Ignore
	bogus SLOF values.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Make check work on mips-arc.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Alias sashARCS as sash.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/arc/console.c: Assume that console is 80x24 vt100 if
	it's serial.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix target fo qemu_mips.
	Fix extension on EFI.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_text.c (print_entry): Put an asterisk
	in front of chosen entry to mark it even if highlighting is lost.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_linux_boot): Default to
	gfxpayload=keep if cbfb is active.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/ata.c (grub_ata_real_open): Use grub_error properly.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Add missing video ids to coreboot and ieee1275 video.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Add mips-arc support.

2013-04-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/dl.c (grub_dl_resolve_symbols): Handle malloc failure.
